# LightEffectLibrary

./: .clang-format  .gitignore  CMakeLists.txt  CompileSubProject.py  LEL.code-workspace  PlotData.txt  README.md  todo.txt
ConceptStudies/ConstExpressions/: Binary.txt  UsageEval.cpp
ConceptStudies/ConstExpressions/include/: Classes.h  Structures.h  utils.h
ConceptStudies/RefOrPointer/: Binary.txt  UsageEval.cpp
ConceptStudies/RefOrPointer/include/: PointerClass.h  ReferenceClass.h  ValueClass.h  utils.h
Doc/: LEL.Doxyfile  LightEffectLibrary.chm  index.html - Verknüpfung.lnk
EffectSource/: Color.cpp  Macro.cpp  Processor.cpp  Sequecer.cpp  SequenceStepper.cpp  StateMachine.cpp  Waveforms.cpp
EffectSource/include/: Basics.h  Color.h  Macro.h  Processor.h  SequenceStepper.h  Sequencer.h  StateMachine.h  Waveforms.h
EffectcSource/: CMakeLists.txt  Color_t.c  EffectMacro.c  EffectProcessor.c  EffectStateMachine.c  EffectWaveforms.c
EffectcSource/include/: Color_t.h  EffectBasics.h  EffectMacro.h  EffectProcessor.h  EffectStateMachine.h  EffectWaveforms.h
Includes/LEL/: EffectMemory.h
SampleApp/: SampleApp.cpp
SampleApp/Elements/: ColorDemo.cpp  ColorDemo.h  EffectDemo.cpp  EffectDemo.h  MyUtils.cpp  MyUtils.h  StateMachineDemo.cpp  StateMachineDemo.h
Source/: CMakeLists.txt  Color.cpp  DemoUsageApp.cpp  EffectMacro.cpp  EffectProcessor.cpp  EffectSequecer.cpp  EffectStateMachine.cpp  EffectWaveforms.cpp  GnuPlot.plt  Macro.cpp  Processor.cpp  SampleApp.cpp  SampleApp.h  SequenceStateMachine.cpp
Source/Modules/: CMakeLists.txt  Color.cpp  Color.h  EffectBasics.h  EffectMacro.cpp  EffectMacro.h  EffectMemory.cpp  EffectProcessor.cpp  EffectProcessor.h  EffectStateMachine.cpp  EffectStateMachine.h  EffectWaveforms.cpp  EffectWaveforms.h  Effects.cpp  Effects.h
Source/include/: Color.h  EffectBasics.h  EffectMacro.h  EffectProcessor.h  EffectSequencer.h  EffectStateMachine.h  EffectWaveforms.h  SequenceStateMachine.h  Sequencer.h
Tests/: CMakeLists.txt  IntegrationTest.cpp
Tests/Include/: MyUtils.h
Tests/Modules/: BuildInParts.cpp  CMakeLists.txt  ColorTest.cpp  EffectProcessorTest.cpp  EffectSequenceProcessorTest.cpp  EffectSequenceStateMachineTest.cpp  EffectStateMachineTest.cpp  MacroVisualization.cpp  ProcessorTest.cpp  SequenceProcessorTest.cpp  SequenceStepperTest.cpp  StateMachineTest.cpp
Tests/Modules/Color/: CMakeLists.txt  ColorTest.cpp
Tests/Modules/EffectStateMachine/: CMakeLists.txt  EffectStateMachineTest.cpp
Tests/Output/: PrintOutputs.py
Tests/cModules/: cColorTest.cpp  cEffectProcessorTest.cpp  cEffectStateMachineTest.cpp  cMacroVisualization.cpp
VSDemo/: SampleApp.sln
VSDemo/SampleApp/: SampleApp.cpp  SampleApp.vcxproj  SampleApp.vcxproj.filters
WaveFormGenerator/: CMakeLists.txt  GenerateWaveforms.cpp  PlotOutput.plt
WaveFormGenerator/Elements/: GaussianWaveforms.cpp  GaussianWaveforms.h  WGUtils.cpp  WGUtils.h
WaveFormGenerator/Output/: GraphTemplates.cpp  PrintWaveForms.py
cSource/: CMakeLists.txt  Color_t.c  EffectMacro.c  EffectProcessor.c  EffectStateMachine.c
cSource/include/: Color_t.h  EffectBasics.h  EffectMacro.h  EffectProcessor.h  EffectStateMachine.h
